--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
     "type": "git",
     "url": "https://github.com/artembuslaev/readablefn.git"
   },
-  "main": "dist/index.js",
-  "files": [
-    "dist"
-  ],
+  "main": "./index.js",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "test": "jest",
